--- a/OverseasShopping/app/src/main/res/layout/activity_login.xml
+++ b/OverseasShopping/app/src/main/res/layout/activity_login.xml
@@ -4,10 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/login_background"
     tools:context=".LoginActivity">
-
-<!--android:background="@drawable/login_background"-->
-    <!--tools:context=".LoginActivity">-->
 
     <ImageView
         android:id="@+id/imageView"
