--- a/OverseasShopping/app/src/main/res/layout/activity_register.xml
+++ b/OverseasShopping/app/src/main/res/layout/activity_register.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="50dp"
@@ -21,25 +21,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/register_button"
-            android:textColor="@color/colorWhite"
-            android:textSize="40sp"
-            app:fontFamily="@font/bubblegum_sans"
-            android:layout_marginStart="35dp"
-            android:layout_marginLeft="35dp"
-            android:layout_marginEnd="35dp"
-            android:layout_marginRight="35dp"
-            android:layout_marginBottom="20dp"
-            android:gravity="center"/>
+        app:layout_constraintTop_toBottomOf="@+id/textView">
 
         <EditText
-            android:id="@+id/editTextRegisterUsername"
+            android:id="@+id/editText"
             style="@style/RegisterField"
             android:layout_width="match_parent"
             android:layout_height="40dp"
@@ -52,7 +37,7 @@
             tools:targetApi="o" />
 
         <EditText
-            android:id="@+id/editTextRegisterPassword"
+            android:id="@+id/editText2"
             style="@style/RegisterField"
             android:layout_width="match_parent"
             android:layout_height="40dp"
@@ -65,7 +50,7 @@
             tools:targetApi="o" />
 
         <EditText
-            android:id="@+id/editTextRegisterPhone"
+            android:id="@+id/editText4"
             style="@style/RegisterField"
             android:layout_width="match_parent"
             android:layout_height="40dp"
@@ -74,11 +59,11 @@
             android:drawableLeft="@drawable/ic_phone_light_icon"
             android:ems="10"
             android:hint="@string/register_telephone_number_hint"
-            android:inputType="number|phone"
+            android:inputType="number"
             tools:targetApi="o" />
 
         <EditText
-            android:id="@+id/editTextRegisterCreditCardNo"
+            android:id="@+id/editText5"
             style="@style/RegisterField"
             android:layout_width="match_parent"
             android:layout_height="40dp"
@@ -96,7 +81,7 @@
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/editTextRegisterCreditCardExpiryDate"
+                android:id="@+id/editText7"
                 style="@style/RegisterField"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
@@ -106,11 +91,11 @@
                 android:autofillHints=""
                 android:ems="10"
                 android:hint="@string/register_creditcard_expiry_hint"
-                android:inputType="number|datetime"
+                android:inputType="number"
                 tools:targetApi="o" />
 
             <EditText
-                android:id="@+id/editTextRegisterCreditCardCcv"
+                android:id="@+id/editText8"
                 style="@style/RegisterField"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
@@ -126,7 +111,7 @@
         </LinearLayout>
 
         <EditText
-            android:id="@+id/editTextRegisterAddress"
+            android:id="@+id/editText6"
             style="@style/RegisterField"
             android:layout_width="match_parent"
             android:layout_height="40dp"
@@ -139,7 +124,7 @@
             tools:targetApi="o" />
 
         <Button
-            android:id="@+id/buttonRegister"
+            android:id="@+id/button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="35dp"
@@ -153,4 +138,34 @@
 
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:contentDescription="@string/app_logo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/app_logo" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:text="@string/register_button"
+        android:textColor="@color/colorWhite"
+        android:textSize="40sp"
+        app:fontFamily="@font/bubblegum_sans"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 </android.support.constraint.ConstraintLayout>
