--- a/OverseasShopping/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/OverseasShopping/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,13 +7,18 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/navigation_message"
+        android:icon="@drawable/ic_message_icon"
+        android:title="@string/title_message" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:id="@+id/navigation_order_history"
+        android:icon="@drawable/ic_order_history_dark_icon"
+        android:title="@string/title_order_history" />
+
+    <item
+        android:id="@+id/navigation_profile"
+        android:icon="@drawable/ic_username_dark_icon"
+        android:title="@string/title_profile" />
 
 </menu>
