--- a/OverseasShopping/app/src/main/res/layout/activity_chat.xml
+++ b/OverseasShopping/app/src/main/res/layout/activity_chat.xml
@@ -1,46 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:clipToPadding="false"
-    android:focusableInTouchMode="true"
+    android:background="@android:color/darker_gray"
     tools:context="com.example.overseasshopping.ChatActivity">
 
-    <ListView
-        android:id="@+id/messages_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="2"
-        android:divider="#fff" />
+    <include
+        android:id="@+id/chat_toolbar">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    </include>
+
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/private_messages_list_of_users"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/chat_toolbar"
+        android:layout_above="@+id/chat_linear_layout"
+        android:layout_marginBottom="6dp"
+        >
+    </android.support.v7.widget.RecyclerView>
+
+    <RelativeLayout
+        android:id="@+id/chat_linear_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#fff"
-        android:orientation="horizontal">
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:background="@android:color/background_light"
+        android:orientation="horizontal"
+        android:layout_alignParentLeft="true">
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/input_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:ems="10"
-            android:hint="Write a message"
-            android:inputType="text"
-            android:paddingHorizontal="10dp"
-            android:text="" />
+            android:hint="type chat here..."
+            android:padding="15dp"
+            android:maxLines="5"
+            android:layout_toStartOf="@+id/send_message_btn"
+            android:layout_toLeftOf="@+id/send_message_btn" />
 
 
         <ImageButton
-            android:layout_width="wrap_content"
+            android:id="@+id/send_message_btn"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:scaleType="fitCenter"
-            android:padding="20dp"
-            android:layout_marginHorizontal="10dp"
-            android:background="@drawable/ic_chevron_right_black_24dp"
-            android:onClick="sendMessage"/>
-    </LinearLayout>
-</LinearLayout>
+            android:src="@drawable/ic_chevron_right_black_24dp"
+            android:layout_alignParentEnd="true"
+            android:backgroundTint="@android:color/white"
+            android:layout_alignParentRight="true"/>
+            //android:onClick="SendMessage"/>
+
+    </RelativeLayout>
+</RelativeLayout>
