--- a/OverseasShopping/app/src/main/res/layout/messages_layout.xml
+++ b/OverseasShopping/app/src/main/res/layout/messages_layout.xml
@@ -22,7 +22,7 @@
         android:layout_marginLeft="3dp"
         android:layout_toEndOf="@+id/message_profile_image"
         android:background="@drawable/receiver_messages_layout"
-        android:text="receiver messages here"
+        android:text="receiver chats here"
         android:padding="10dp"
         android:textSize="14sp"
         android:textStyle="bold"
@@ -59,7 +59,7 @@
         android:layout_marginTop="10dp"
         android:layout_alignParentTop="@+id/receiver_message_text"
         android:background="@drawable/sender_messages_layout"
-        android:text="sender messages"
+        android:text="sender chats"
         android:textSize="14sp"
         android:padding="10dp"
         android:textStyle="bold"
