--- a/OverseasShopping/app/src/main/res/layout/fragment_product.xml
+++ b/OverseasShopping/app/src/main/res/layout/fragment_product.xml
@@ -5,6 +5,20 @@
     android:layout_height="match_parent"
     android:layout_margin="16dp" >
 
+    <ImageView
+        android:id="@+id/product_photo"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_gravity="center_horizontal"
+        android:cropToPadding="true"
+        android:scaleType="centerInside" />
+    
+    <ImageButton
+        android:id="@+id/product_camera"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@android:drawable/ic_menu_camera" />
+
     <TextView
         style="?android:listSeparatorTextViewStyle"
         android:layout_width="match_parent"
