--- a/OverseasShopping/app/src/main/res/layout/activity_chat.xml
+++ b/OverseasShopping/app/src/main/res/layout/activity_chat.xml
@@ -3,55 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/darker_gray"
-    tools:context="com.example.overseasshopping.ChatActivity">
-
-    <include
-        android:id="@+id/chat_toolbar">
-
-    </include>
-
+    tools:context=".ChatFragment">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/private_messages_list_of_users"
+        android:id="@+id/chats_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/chat_toolbar"
-        android:layout_above="@+id/chat_linear_layout"
-        android:layout_marginBottom="6dp"
-        >
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true">
+
     </android.support.v7.widget.RecyclerView>
 
-    <RelativeLayout
-        android:id="@+id/chat_linear_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:background="@android:color/background_light"
-        android:orientation="horizontal"
-        android:layout_alignParentLeft="true">
 
-        <EditText
-            android:id="@+id/input_message"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="type chat here..."
-            android:padding="15dp"
-            android:maxLines="5"
-            android:layout_toStartOf="@+id/send_message_btn"
-            android:layout_toLeftOf="@+id/send_message_btn" />
-
-
-        <ImageButton
-            android:id="@+id/send_message_btn"
-            android:layout_width="60dp"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_chevron_right_black_24dp"
-            android:layout_alignParentEnd="true"
-            android:backgroundTint="@android:color/white"
-            android:layout_alignParentRight="true"/>
-            //android:onClick="SendMessage"/>
-
-    </RelativeLayout>
 </RelativeLayout>
