--- a/OverseasShopping/app/src/main/res/layout/fragment_chat_user.xml
+++ b/OverseasShopping/app/src/main/res/layout/fragment_chat_user.xml
@@ -2,14 +2,14 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/custom_profile_name"
+            android:id="@+id/chat_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -21,10 +21,10 @@
 
 
         <TextView
-            android:id="@+id/custom_user_last_seen"
+            android:id="@+id/chat_lastseen"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/custom_profile_name"
+            android:layout_below="@+id/chat_name"
             android:layout_alignParentStart="true"
             android:layout_marginTop="3dp"
             android:text="@string/last_seen"
