--- a/OverseasShopping/app/src/main/res/layout/activity_message.xml
+++ b/OverseasShopping/app/src/main/res/layout/activity_message.xml
@@ -3,11 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/darker_gray"
-    tools:context="com.example.overseasshopping.ChatActivity">
+    tools:context="com.example.overseasshopping.MessageActivity">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/private_messages_list_of_users"
+        android:id="@+id/messages_list_of_users"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/chat_linear_layout"
@@ -21,7 +20,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:background="@android:color/background_light"
         android:orientation="horizontal"
         android:layout_alignParentLeft="true">
 
