--- a/OverseasShopping/app/src/main/res/layout/activity_messages.xml
+++ b/OverseasShopping/app/src/main/res/layout/activity_messages.xml
@@ -4,19 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/darker_gray"
-    tools:context="com.example.overseasshopping.ChatActivity">
+    tools:context="com.example.overseasshopping.MessageActivity">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/private_messages_list_of_users"
+        android:id="@+id/messages_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/chat_linear_layout"
+        android:layout_above="@+id/message_linear_layout"
         android:layout_marginBottom="6dp"
         >
     </android.support.v7.widget.RecyclerView>
 
     <RelativeLayout
-        android:id="@+id/chat_linear_layout"
+        android:id="@+id/message_linear_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -29,7 +29,7 @@
             android:id="@+id/input_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="type chat here..."
+            android:hint="type message here..."
             android:padding="15dp"
             android:maxLines="5"
             android:layout_toStartOf="@+id/send_message_btn"
