--- a/OverseasShopping/app/src/main/res/layout/activity_messages_list.xml
+++ b/OverseasShopping/app/src/main/res/layout/activity_messages_list.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChatFragment">
+    tools:context=".MessageFragment">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/chats_list"
+        android:id="@+id/messages_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentRight="true"
