--- a/OverseasShopping/app/src/main/res/layout/fragment_message_box.xml
+++ b/OverseasShopping/app/src/main/res/layout/fragment_message_box.xml
@@ -25,7 +25,7 @@
                 android:textStyle="bold"/>
 
             <TextView
-                android:id="@+id/message_date"
+                android:id="@+id/message_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toEndOf="@+id/user_name"
