--- a/OverseasShopping/app/src/main/res/layout/fragment_message_list_display.xml
+++ b/OverseasShopping/app/src/main/res/layout/fragment_message_list_display.xml
@@ -9,7 +9,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/custom_profile_name"
+            android:id="@+id/receiver_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -21,10 +21,10 @@
 
 
         <TextView
-            android:id="@+id/custom_user_last_seen"
+            android:id="@+id/receiver_last_seen"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/custom_profile_name"
+            android:layout_below="@+id/receiver_name"
             android:layout_alignParentStart="true"
             android:layout_marginTop="3dp"
             android:text="@string/last_seen"
