--- a/OverseasShopping/app/src/main/res/layout/activity_messages.xml
+++ b/OverseasShopping/app/src/main/res/layout/activity_messages.xml
@@ -1,49 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fragment_container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/darker_gray"
-    tools:context="com.example.overseasshopping.MessageActivity">
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/messages_list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/message_linear_layout"
-        android:layout_marginBottom="6dp"
-        >
-    </android.support.v7.widget.RecyclerView>
-
-    <RelativeLayout
-        android:id="@+id/message_linear_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:background="@android:color/background_light"
-        android:orientation="horizontal"
-        android:layout_alignParentLeft="true">
-
-        <EditText
-            android:id="@+id/input_message"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="type message here..."
-            android:padding="15dp"
-            android:maxLines="5"
-            android:layout_toStartOf="@+id/send_message_btn"
-            android:layout_toLeftOf="@+id/send_message_btn" />
-
-
-        <ImageButton
-            android:id="@+id/send_message_btn"
-            android:layout_width="60dp"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_chevron_right_black_24dp"
-            android:layout_alignParentEnd="true"
-            android:backgroundTint="@android:color/white"
-            android:layout_alignParentRight="true"/>
-
-    </RelativeLayout>
-</RelativeLayout>
+    android:layout_height="match_parent" />
