--- a/OverseasShopping/app/src/main/res/layout/fragment_message_list_display.xml
+++ b/OverseasShopping/app/src/main/res/layout/fragment_message_list_display.xml
@@ -9,7 +9,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/receiver_name"
+            android:id="@+id/target_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
