--- a/OverseasShopping/app/src/main/res/layout/list_item_orderhistory.xml
+++ b/OverseasShopping/app/src/main/res/layout/list_item_orderhistory.xml
@@ -2,23 +2,19 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="8dp">
-    <ImageView
-        android:id="@+id/product_image"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Image"/>
+
     <TextView
-        android:id="@+id/product_title"
+        android:id="@+id/orderhistory_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Product Title"/>
+        android:text="Order History Title"/>
     <TextView
-        android:id="@+id/product_price"
+        android:id="@+id/orderhistory_price"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Price"/>
+        android:text="Order History Price"/>
 
 </LinearLayout>
