Update Product List Fragment

--- a/OverseasShopping/app/src/main/res/values/preloaded_fonts.xml
+++ b/OverseasShopping/app/src/main/res/values/preloaded_fonts.xml
@@ -4,6 +4,8 @@
         <item>@font/aldrich</item>
         <item>@font/architects_daughter</item>
         <item>@font/aref_ruqaa</item>
+        <item>@font/assistant_extralight</item>
+        <item>@font/assistant_light</item>
         <item>@font/autour_one</item>
         <item>@font/bubblegum_sans</item>
         <item>@font/cabin_sketch</item>
