--- a/OverseasShopping/app/src/main/res/layout/fragment_product_details.xml
+++ b/OverseasShopping/app/src/main/res/layout/fragment_product_details.xml
@@ -70,6 +70,19 @@
         android:text="Product Owner is displayed here."
         android:textStyle="bold"/>
 
+    <TextView
+        style="?android:listSeparatorTextViewStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/purchase_quantity"/>
+
+    <EditText
+        android:id="@+id/purchase_quantity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:hint="@string/purchase_quantity_hint"/>
+
     <Button
         android:id="@+id/place_order_button"
         android:layout_width="wrap_content"
