Validation for add product + set decimal to 2 places

--- a/OverseasShopping/app/src/main/res/layout/fragment_product.xml
+++ b/OverseasShopping/app/src/main/res/layout/fragment_product.xml
@@ -55,6 +55,7 @@
         android:id="@+id/product_quantity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:digits="0123456789"
         android:hint="@string/product_quantity_hint"/>
 
     <TextView
