--- a/OverseasShopping/app/src/main/res/layout/fragment_product_list.xml
+++ b/OverseasShopping/app/src/main/res/layout/fragment_product_list.xml
@@ -4,16 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:id="@+id/search_bar"/>
+
 
     <android.support.v7.widget.RecyclerView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/product_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/search_bar" />
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
