--- a/OverseasShopping/app/src/main/res/layout/fragment_product_details.xml
+++ b/OverseasShopping/app/src/main/res/layout/fragment_product_details.xml
@@ -5,6 +5,14 @@
     android:layout_height="match_parent"
     android:layout_margin="16dp" >
 
+    <ImageView
+        android:id="@+id/product_photo_view"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_gravity="center_horizontal"
+        android:cropToPadding="true"
+        android:scaleType="centerInside" />
+
     <TextView
         style="?android:listSeparatorTextViewStyle"
         android:layout_width="match_parent"
