--- a/OverseasShopping/app/src/main/res/layout/list_item_product.xml
+++ b/OverseasShopping/app/src/main/res/layout/list_item_product.xml
@@ -2,11 +2,17 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="8dp">
+    android:padding="8dp"
+    tools:context="com.example.overseasshopping.ProductListActivity">
 
+    <EditText
+        android:id="@+id/search"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     <ImageView
         android:id="@+id/product_image"
         android:layout_width="match_parent"
