--- a/OverseasShopping/app/src/main/res/layout/list_item_orderhistory.xml
+++ b/OverseasShopping/app/src/main/res/layout/list_item_orderhistory.xml
@@ -30,5 +30,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Buyer/Seller"/>
+    <TextView
+        android:id="@+id/order_date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Order Date"/>
 
 </LinearLayout>
