--- a/OverseasShopping/app/src/main/res/menu/fragment_product_list.xml
+++ b/OverseasShopping/app/src/main/res/menu/fragment_product_list.xml
@@ -7,7 +7,7 @@
         android:id="@+id/action_search"
         android:icon="@drawable/ic_search"
         app:showAsAction="ifRoom|collapseActionView"
-        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:actionViewClass="android.widget.SearchView"
 
         ></item>
     <item android:id="@+id/new_product"
