--- a/OverseasShopping/app/src/main/res/layout/list_item_orderhistory.xml
+++ b/OverseasShopping/app/src/main/res/layout/list_item_orderhistory.xml
@@ -1,40 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="8dp">
+    android:layout_marginBottom="4dp"
+    app:cardElevation="4dp"
+    app:contentPadding="8dp">
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:padding="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
     <TextView
         android:id="@+id/order_ID"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+     android:textStyle="bold"
+        android:textSize="18sp"
+
         android:text="Order ID"/>
-    <TextView
-        android:id="@+id/order_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Order Title"/>
+
     <TextView
         android:id="@+id/order_total_price"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+    android:layout_weight="1"
+      android:layout_alignParentRight="true"
+        android:textSize="12sp"
         android:text="Order Total Price"/>
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/order_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="Order Title"/>
     <TextView
         android:id="@+id/order_total_quantity"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
         android:text="Order Total Quantity"/>
     <TextView
         android:id="@+id/order_buyer_seller"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
         android:text="Buyer/Seller"/>
     <TextView
         android:id="@+id/order_date"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
         android:text="Order Date"/>
 
 </LinearLayout>
+
+</android.support.v7.widget.CardView>
