--- a/OverseasShopping/app/src/main/res/layout/list_item_product.xml
+++ b/OverseasShopping/app/src/main/res/layout/list_item_product.xml
@@ -1,22 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="8dp">
+    android:layout_marginBottom="4dp"
+    app:cardElevation="4dp"
+    app:contentPadding="8dp">
 
-
+    <LinearLayout
+        android:orientation="vertical"
+        android:padding="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     <ImageView
         android:id="@+id/product_image"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:padding="2dp"
         android:text="Image"/>
 
@@ -36,6 +41,7 @@
         android:layout_toEndOf="@+id/product_image"
         android:layout_toRightOf="@+id/product_image"
         android:text="Product Title"
+        android:textSize="18sp"
         app:fontFamily="@font/viga"
         android:padding="2dp"
         android:layout_marginLeft="2dp"/>
@@ -48,8 +54,10 @@
         android:layout_toEndOf="@+id/product_image"
         android:layout_toRightOf="@+id/product_image"
         android:text="Price"
+        android:textSize="18sp"
         app:fontFamily="@font/assistant_light"
         android:padding="2dp"
         android:layout_marginLeft="2dp"/>
     </RelativeLayout>
-</LinearLayout>
+    </LinearLayout>
+</android.support.v7.widget.CardView>
