--- a/OverseasShopping/app/src/main/res/layout/fragment_message_box.xml
+++ b/OverseasShopping/app/src/main/res/layout/fragment_message_box.xml
@@ -25,6 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/chatmessagetime"
+            android:layout_marginLeft="2mm"
             android:textSize="15sp"/>
 
     </LinearLayout>
