--- a/OverseasShopping/app/src/main/res/layout/fragment_product_details.xml
+++ b/OverseasShopping/app/src/main/res/layout/fragment_product_details.xml
@@ -88,7 +88,7 @@
         android:id="@+id/purchase_quantity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="number"
+        android:digits="0123456789"
         android:hint="@string/purchase_quantity_hint"/>
 
     <Button
